--- a/client/src/main.css
+++ b/client/src/main.css
@@ -17,8 +17,8 @@ body {
 .board {
     max-width: 350px;
     max-height: 300px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: flex;
     flex-direction: row-reverse;
 }
@@ -36,6 +36,13 @@ body {
     line-height: 50px;
     border: 1px solid black;
     position: relative;
+}
+
+.cell.medium {
+    width: 35px;
+    height: 35px;
+    font-size: 30px;
+    line-height: 35px;
 }
 
 .cell.smaller {
@@ -86,12 +93,48 @@ body {
     color: lightgrey;
 }
 
+.nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav div {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.slide {
+    width: 700px;
+    height: 400px;
+}
+
+.slide h4 {
+    margin: 0;
+}
+
 .bordered-table {
     border-collapse: collapse;
     border: 1px solid lightgrey;
-    float: left;
+    /* float: left; */
+    /* position: fixed; */
+    font-size: 18px;
+}
+
+.float.left {
+    background-color: white;
     position: fixed;
-    top: 240px;
+    top: 20px;
+    left: 20px;
+}
+
+.float.right {
+    background-color: white;
+    position: fixed;
+    top: 50px;
+    left: 20px;
+
 }
 
 .bordered-table th {
@@ -107,6 +150,7 @@ body {
 }
 
 .subSections {
+    margin: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -115,14 +159,18 @@ body {
 }
 
 .explanation {
-    width: 40%;
-    max-width: 800px;
-    min-width: 400px;
+    text-align: left;
 }
 
 .left {
     margin-left: 0;
     text-align: left;
+    justify-content: left;
+}
+
+pre {
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 @keyframes rotation {
