--- a/public/main.css
+++ b/public/main.css
@@ -12,6 +12,26 @@ body {
 
 .banner {
     margin-bottom: 50px;
+    max-width: 500px;
+}
+
+.hover {
+    cursor: pointer;
+    border-bottom: 1px solid black;
+    /* border-radius: 15px; */
+}
+
+
+/* .banner.hover{
+    border: 0;
+} */
+
+.banner.hover span {
+    display: none;
+}
+
+.banner.hover::after {
+    content: 'restart';
 }
 
 .board {
@@ -21,6 +41,17 @@ body {
     padding-right: 20px;
     display: flex;
     flex-direction: row-reverse;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+.game.board {
+    cursor: pointer;
 }
 
 .column {
